--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+/* base styles */
+* {
+  margin: 0;
+  font-family: "Quicksand";
+  color: #333;
+}
+
 .App {
-  text-align: center;
+  width:60%;
+  margin: auto ;  
 }
 
 .App-logo {
